--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -1,3 +1,3 @@
-body{font-family:Georgia,Cambria,"Times New Roman",serif;font-size:20px}h1{color:#e2eede}h2{color:#aed0be}h3{color:#808e87}h4{color:#f4b266}h5{color:#f7ca96}input{border-radius:5px;font-family:Georgia,Cambria,"Times New Roman",serif;font-size:20px}textarea{border-radius:5px;font-family:Georgia,Cambria,"Times New Roman",serif;font-size:20px}
+body{font-family:Georgia,Cambria,"Times New Roman",serif;font-size:20px}h1{color:#e2eede}h2{color:#aed0be}h3{color:#808e87}h4{color:#f4b266}h5{color:#f7ca96}label{font-size:25px;color:#808e87}table,th,td{border:1px solid black}th:hover{color:#f4b266}tr:nth-child(even){background-color:#e2eede}img,input,textarea{border-radius:5px;font-family:Georgia,Cambria,"Times New Roman",serif;font-size:20px;border:1px solid black}
 
 /*# sourceMappingURL=style.css.map */
